[gd_scene load_steps=30 format=2]

[ext_resource path="res://NPC/BrainJar/BrainEatingEvent/BrainEatingEvent.gd" type="Script" id=1]
[ext_resource path="res://Rooms/Area1/1-1/lab_battle_background.png" type="Texture" id=2]
[ext_resource path="res://NPC/BrainJar/BrainEatingEvent/brainjar_brain_larger.png" type="Texture" id=3]
[ext_resource path="res://NPC/BrainJar/BrainEatingEvent/orange_walking.png" type="Texture" id=4]
[ext_resource path="res://NPC/BrainJar/BrainEatingEvent/green_holding_brain.png" type="Texture" id=5]
[ext_resource path="res://NPC/BrainJar/BrainEatingEvent/orange_holding_brain.png" type="Texture" id=6]
[ext_resource path="res://NPC/BrainJar/DroppedBrainSpriteFrames.tres" type="SpriteFrames" id=7]
[ext_resource path="res://NPC/BrainJar/BrainEatingEvent/half_brain.png" type="Texture" id=8]
[ext_resource path="res://Engine/Battle/BattleInputHint.tscn" type="PackedScene" id=9]
[ext_resource path="res://NPC/BrainJar/BrainEatingEvent/FlaskHoldingBrain.gd" type="Script" id=10]
[ext_resource path="res://SoundEffects/crunch1.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]
resource_name = "main"
length = 6.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("OrangeWalking:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.4, 1.9, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 430, 113 ), Vector2( 430, 113 ), Vector2( 205, 115 ), Vector2( 205, 115 ), Vector2( 418, 129 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OrangeWalking:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OrangeWalking:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OrangeWalking:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.4, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GreenHolding:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.1, 3.5, 4.25, 4.35, 4.8, 4.9, 4.95 ),
"transitions": PoolRealArray( 1, 0.535887, 1, 0.5, 1, 0.378929, 1, 1 ),
"update": 0,
"values": [ Vector2( -102, 106 ), Vector2( -102, 106 ), Vector2( 92, 108 ), Vector2( 92, 108 ), Vector2( 84, 108 ), Vector2( 84, 108 ), Vector2( 38, 108 ), Vector2( 42, 108 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GreenHolding:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 5.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("OrangeHolding:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2.6, 2.95, 4.3, 4.4, 4.8, 4.9, 4.95 ),
"transitions": PoolRealArray( 1, 0.466517, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 511, 108 ), Vector2( 511, 108 ), Vector2( 292, 108 ), Vector2( 292, 108 ), Vector2( 298, 108 ), Vector2( 298, 108 ), Vector2( 337, 108 ), Vector2( 329, 108 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("OrangeHolding:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 5.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("DroppedBrain:offset")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 0.353553, 1.86607, 1 ),
"update": 0,
"values": [ Vector2( 0, -30 ), Vector2( -2, -40 ), Vector2( -4, -4 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("DroppedBrain:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.5, 1.55, 1.6, 1.9, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 192, 161 ), Vector2( 192, 161 ), Vector2( 185, 149 ), Vector2( 229, 147 ), Vector2( 229, 147 ), Vector2( 449, 159 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("OrangeHolding/DroppedBrainLarge:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 4.25, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.564, 0.728 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("OrangeHolding/DroppedBrainLarge:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 4.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("OrangeHolding/HalfBrain:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 4.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("GreenHolding/HalfBrain:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 4.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("GreenHolding/HalfBrain:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 5.2, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 78, 25 ), Vector2( 78, 25 ), Vector2( 25, 57 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("OrangeHolding/HalfBrain:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 5.35, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -77, 32 ), Vector2( -77, 32 ), Vector2( -34, 63 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("BattleInputHint:modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 5.9, 6 ),
"transitions": PoolRealArray( 0.535886, 0.535886, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 112 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 112 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 0, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 42, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 42, 42 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 42, 0, 42, 42 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 5 ), SubResource( 5 ), SubResource( 5 ) ],
"loop": true,
"name": "small",
"speed": 8.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0.227564, 0.936364 ), 0.0, 0.0, 0, 0, Vector2( 0.705128, 0.0090909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
width = 32
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 0.5
emission_shape = 2
emission_box_extents = Vector3( 8, 8, 1 )
flag_disable_z = true
direction = Vector3( 3, -1, 0 )
spread = 71.76
gravity = Vector3( 0, 500, 0 )
initial_velocity = 236.49
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 0.82
scale_curve = SubResource( 11 )
color = Color( 0.458824, 0.45098, 0.301961, 1 )
hue_variation = 0.09
hue_variation_random = 0.42

[sub_resource type="Animation" id=13]
length = 0.1
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.06, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 23, 8 ), Vector2( 16, 10 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HalfBrain:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02, 0.06, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 25, 57 ), Vector2( 48, 66 ), Vector2( 40, 68 ), Vector2( 26, 59 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.02, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1 ]
}

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 14 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="ParticlesMaterial" id=17]
lifetime_randomness = 0.5
emission_shape = 2
emission_box_extents = Vector3( 8, 8, 1 )
flag_disable_z = true
direction = Vector3( -3, -1, 0 )
spread = 71.76
gravity = Vector3( 0, 500, 0 )
initial_velocity = 236.49
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 0.82
scale_curve = SubResource( 11 )
color = Color( 0.458824, 0.45098, 0.301961, 1 )
hue_variation = 0.09
hue_variation_random = 0.42

[sub_resource type="Animation" id=18]
length = 0.1
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.06, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -23, 8 ), Vector2( -16, 10 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HalfBrain:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02, 0.06, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -34, 60 ), Vector2( -61, 75 ), Vector2( -54, 78 ), Vector2( -35, 61 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.02, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1 ]
}

[node name="BrainEatingEvent" type="Node2D"]
script = ExtResource( 1 )

[node name="ReferenceBackground" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.443137 )
texture = ExtResource( 2 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/main = SubResource( 1 )

[node name="OrangeWalking" type="AnimatedSprite" parent="."]
position = Vector2( 430, 113 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="GreenHolding" type="Sprite" parent="."]
position = Vector2( -102, 106 )
texture = ExtResource( 5 )
hframes = 3
script = ExtResource( 10 )

[node name="HalfBrain" type="AnimatedSprite" parent="GreenHolding"]
visible = false
position = Vector2( 78, 25 )
frames = SubResource( 9 )
playing = true
flip_h = true

[node name="Particles2D" type="Particles2D" parent="GreenHolding/HalfBrain"]
emitting = false
amount = 128
speed_scale = 2.0
explosiveness = 0.22
local_coords = false
process_material = SubResource( 12 )

[node name="Timer" type="Timer" parent="GreenHolding/HalfBrain/Particles2D"]
wait_time = 0.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="GreenHolding"]
anims/chomp = SubResource( 13 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="GreenHolding"]
stream = ExtResource( 11 )

[node name="OrangeHolding" type="Sprite" parent="."]
position = Vector2( 511, 108 )
texture = ExtResource( 6 )
hframes = 3
script = ExtResource( 10 )
who = 1

[node name="DroppedBrainLarge" type="AnimatedSprite" parent="OrangeHolding"]
position = Vector2( -96, 22 )
frames = SubResource( 16 )
frame = 1
playing = true

[node name="HalfBrain" type="AnimatedSprite" parent="OrangeHolding"]
visible = false
position = Vector2( -77, 32 )
frames = SubResource( 9 )
animation = "small"
frame = 1
playing = true

[node name="Particles2D" type="Particles2D" parent="OrangeHolding/HalfBrain"]
position = Vector2( -2, -2 )
emitting = false
amount = 128
speed_scale = 2.0
explosiveness = 0.22
local_coords = false
process_material = SubResource( 17 )

[node name="Timer" type="Timer" parent="OrangeHolding/HalfBrain/Particles2D"]
wait_time = 0.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="OrangeHolding"]
anims/chomp = SubResource( 18 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="OrangeHolding"]
position = Vector2( -35, 59 )
stream = ExtResource( 11 )

[node name="DroppedBrain" type="AnimatedSprite" parent="."]
position = Vector2( 192, 161 )
frames = ExtResource( 7 )
frame = 2
playing = true
offset = Vector2( 0, -30 )

[node name="BattleInputHint" parent="." instance=ExtResource( 9 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 191, 63 )
flashy = true
action_hint = "confirm"
label = "C O N S U M E"
